--- a/stretch-assignment/digital_timer/index.html
+++ b/stretch-assignment/digital_timer/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>DOM I</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles.css">
+
+    <script type="text/javascript" src="./index.js">defer</script>
   </head>
   <body>
     <div class="digits">
